--- a/package.json
+++ b/package.json
@@ -10,17 +10,22 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.8",
-    "@fortawesome/fontawesome-svg-core": "^6.1.1",
-    "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "@fortawesome/react-fontawesome": "^0.1.18",
+    "@fortawesome/fontawesome-svg-core": "^6.1.2",
+    "@fortawesome/free-regular-svg-icons": "^6.1.2",
+    "@fortawesome/free-solid-svg-icons": "^6.1.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.6",
+    "@reduxjs/toolkit": "^1.8.2",
     "@types/react-table": "^7.7.12",
+    "axios": "^0.27.2",
     "cookie": "^0.5.0",
     "next": "12.1.6",
     "next-seo": "^5.4.0",
     "postgraphile": "^4.12.9",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-redux": "^8.0.2",
     "react-table": "^7.8.0",
     "react-transition-group": "^4.4.2"
   },
