--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev | local-ssl-proxy --source 3001 --target 3000",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watch",
+    "test:ci": "jest --ci",
+    "cypress": "cypress open"
   },
   "dependencies": {
     "@apollo/client": "^3.6.8",
@@ -20,25 +23,48 @@
     "@types/react-table": "^7.7.12",
     "axios": "^0.27.2",
     "cookie": "^0.5.0",
-    "next": "12.1.6",
+    "cookies-next": "^2.1.1",
+    "next": "12",
     "next-seo": "^5.4.0",
     "postgraphile": "^4.12.9",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
+    "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-table": "^7.8.0",
     "react-transition-group": "^4.4.2"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.3.0",
     "@types/cookie": "^0.5.1",
+    "@types/cypress": "^1.1.3",
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
+    "@types/testing-library__jest-dom": "^5.14.5",
+    "@types/testing-library__react": "^10.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.34.0",
     "autoprefixer": "^10.4.7",
+    "cypress": "^10.4.0",
     "eslint": "8.16.0",
     "eslint-config-next": "12.1.6",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-jest-dom": "^4.0.2",
+    "husky": "^8.0.1",
+    "jest": "^28.1.3",
+    "jest-environment-jsdom": "^28.1.3",
+    "lint-staged": "^13.0.3",
     "postcss": "^8.4.14",
+    "prettier": "^2.7.1",
     "tailwindcss": "^3.0.24",
+    "ts-node": "^10.9.1",
     "typescript": "4.7.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
