--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-google-recaptcha": "^2.1.0",
     "react-redux": "^8.0.2",
     "react-table": "^7.8.0",
+    "sharp": "^0.31.1",
     "validator": "^13.7.0"
   },
   "devDependencies": {
@@ -55,6 +56,8 @@
     "eslint-plugin-jest-dom": "^4.0.2",
     "husky": "^8.0.1",
     "jest": "^28.1.3",
+    "lint-staged": "^13.0.3",
+    "prettier": "^2.7.1",
     "tailwindcss": "^3.0.24",
     "typescript": "4.7.2"
   },
