--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "axios": "^0.27.2",
     "cookie": "^0.5.0",
     "cookies-next": "^2.1.1",
+    "graphql": "^16.6.0",
     "next": "12",
     "next-seo": "^5.4.0",
+    "postcss": "^8.4.17",
     "postgraphile": "^4.12.9",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -37,6 +39,7 @@
     "react-redux": "^8.0.2",
     "react-table": "^7.8.0",
     "sharp": "^0.31.1",
+    "ts-node": "^10.9.1",
     "validator": "^13.7.0"
   },
   "devDependencies": {
