--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "ts-node --project tsconfig.server.json server.ts",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production ts-node --project tsconfig.server.json server.ts",
     "lint": "next lint",
     "test": "jest --watch",
     "test:ci": "jest --ci",
@@ -27,8 +27,10 @@
     "axios": "^0.27.2",
     "cookie": "^0.5.0",
     "cookies-next": "^2.1.1",
+    "express": "^4.18.2",
     "graphql": "^16.6.0",
-    "next": "12",
+    "http": "^0.0.1-security",
+    "next": "^12.3.1",
     "next-seo": "^5.4.0",
     "postcss": "^8.4.17",
     "postgraphile": "^4.12.9",
@@ -40,12 +42,14 @@
     "react-table": "^7.8.0",
     "sharp": "^0.31.1",
     "ts-node": "^10.9.1",
+    "url": "^0.11.0",
     "validator": "^13.7.0"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@types/cookie": "^0.5.1",
+    "@types/express": "^4.17.14",
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
