--- a/package.json
+++ b/package.json
@@ -13,60 +13,55 @@
     "cypress": "cypress open"
   },
   "dependencies": {
-    "@apollo/client": "^3.6.8",
-    "@fortawesome/fontawesome-svg-core": "^6.1.2",
-    "@fortawesome/free-regular-svg-icons": "^6.1.2",
-    "@fortawesome/free-solid-svg-icons": "^6.1.2",
+    "@apollo/client": "^3.7.3",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-regular-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@headlessui/react": "^1.6.6",
-    "@heroicons/react": "^1.0.6",
-    "@reduxjs/toolkit": "^1.8.2",
-    "@types/react-table": "^7.7.12",
-    "@types/validator": "^13.7.7",
-    "autoprefixer": "^10.4.12",
-    "axios": "^0.27.2",
+    "@headlessui/react": "^1.7.7",
+    "@reduxjs/toolkit": "^1.9.1",
+    "@types/react-table": "^7.7.14",
+    "@types/validator": "^13.7.10",
+    "autoprefixer": "^10.4.13",
+    "axios": "^1.2.2",
     "cookie": "^0.5.0",
     "cookies-next": "^2.1.1",
-    "express": "^4.18.2",
     "graphql": "^16.6.0",
-    "http": "^0.0.1-security",
-    "next": "^12.3.1",
-    "next-seo": "^5.4.0",
-    "postcss": "^8.4.17",
-    "postgraphile": "^4.12.9",
+    "load-json-file": "^7.0.1",
+    "next": "^13.1.1",
+    "next-seo": "^5.15.0",
+    "postgraphile": "^4.12.12",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^2.1.0",
-    "react-redux": "^8.0.2",
+    "react-redux": "^8.0.5",
     "react-table": "^7.8.0",
-    "sharp": "^0.31.1",
-    "ts-node": "^10.9.1",
-    "url": "^0.11.0",
-    "validator": "^13.7.0"
+    "sharp": "^0.31.3",
+    "validator": "^13.7.0",
+    "write-json-file": "^5.0.0"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@types/cookie": "^0.5.1",
-    "@types/express": "^4.17.14",
-    "@types/node": "17.0.35",
-    "@types/react": "18.0.9",
-    "@types/react-dom": "18.0.5",
+    "@types/node": "18.11.18",
+    "@types/react": "18.0.26",
+    "@types/react-dom": "18.0.10",
     "@types/react-google-recaptcha": "^2.1.5",
     "@types/testing-library__jest-dom": "^5.14.5",
-    "@typescript-eslint/eslint-plugin": "^5.34.0",
-    "cypress": "^10.4.0",
-    "eslint": "8.16.0",
-    "eslint-config-next": "12.1.6",
+    "@typescript-eslint/eslint-plugin": "^5.47.1",
+    "cypress": "^12.2.0",
+    "eslint": "8.31.0",
+    "eslint-config-next": "^13.1.1",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-jest-dom": "^4.0.2",
-    "husky": "^8.0.1",
-    "jest": "^28.1.3",
-    "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1",
-    "tailwindcss": "^3.0.24",
-    "typescript": "4.7.2"
+    "eslint-plugin-jest-dom": "^4.0.3",
+    "husky": "^8.0.2",
+    "jest": "^29.3.1",
+    "lint-staged": "^13.1.0",
+    "prettier": "^2.8.1",
+    "tailwindcss": "^3.2.4",
+    "typescript": "4.9.4"
   },
   "husky": {
     "hooks": {
