--- a/package.json
+++ b/package.json
@@ -13,38 +13,53 @@
     "cypress": "cypress open"
   },
   "dependencies": {
-    "@apollo/client": "^3.7.3",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.7",
+    "@prisma/client": "4.13.0",
     "@reduxjs/toolkit": "^1.9.1",
+    "@tanstack/react-query": "^4.29.5",
+    "@trpc/client": "^10.21.1",
+    "@trpc/next": "^10.21.1",
+    "@trpc/react": "^9.27.4",
+    "@trpc/react-query": "^10.21.1",
+    "@trpc/server": "^10.21.1",
     "@types/react-table": "^7.7.14",
     "@types/validator": "^13.7.10",
     "autoprefixer": "^10.4.13",
     "axios": "^1.2.2",
     "cookie": "^0.5.0",
     "cookies-next": "^2.1.1",
+    "devalue": "^4.3.0",
+    "dotenv": "^16.0.3",
     "graphql": "^16.6.0",
     "load-json-file": "^7.0.1",
+    "luxon": "^3.3.0",
+    "moment-timezone": "^0.5.43",
     "next": "^13.1.1",
     "next-seo": "^5.15.0",
-    "postgraphile": "^4.12.12",
+    "pnpm": "^8.3.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^2.1.0",
+    "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
     "react-table": "^7.8.0",
     "sharp": "^0.31.3",
+    "superjson": "^1.12.3",
     "validator": "^13.7.0",
-    "write-json-file": "^5.0.0"
+    "write-json-file": "^5.0.0",
+    "xlsx": "^0.18.5",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@types/cookie": "^0.5.1",
+    "@types/luxon": "^3.3.0",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
@@ -60,6 +75,7 @@
     "jest": "^29.3.1",
     "lint-staged": "^13.1.0",
     "prettier": "^2.8.1",
+    "prisma": "^4.13.0",
     "tailwindcss": "^3.2.4",
     "typescript": "4.9.4"
   },
