--- a/package.json
+++ b/package.json
@@ -23,37 +23,26 @@
     "@tanstack/react-query": "^4.29.5",
     "@trpc/client": "^10.21.1",
     "@trpc/next": "^10.21.1",
-    "@trpc/react": "^9.27.4",
     "@trpc/react-query": "^10.21.1",
     "@trpc/server": "^10.21.1",
     "@types/react-table": "^7.7.14",
     "@types/validator": "^13.7.10",
-    "autoprefixer": "^10.4.13",
-    "axios": "^1.2.2",
     "cookie": "^0.5.0",
     "cookies-next": "^2.1.1",
-    "devalue": "^4.3.0",
     "dotenv": "^16.0.3",
-    "graphql": "^16.6.0",
-    "load-json-file": "^7.0.1",
     "luxon": "^3.3.0",
     "moment-timezone": "^0.5.43",
     "next": "^13.1.1",
     "next-seo": "^5.15.0",
-    "pnpm": "^8.3.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^2.1.0",
-    "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
     "react-table": "^7.8.0",
-    "sharp": "^0.31.3",
     "superjson": "^1.12.3",
     "validator": "^13.7.0",
-    "write-json-file": "^5.0.0",
-    "xlsx": "^0.18.5",
-    "zod": "^3.21.4"
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
