--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/cookie": "^0.5.1",
     "@types/luxon": "^3.3.0",
     "@types/node": "18.11.18",
+    "@types/prop-types": "^15.7.5",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "@types/react-google-recaptcha": "^2.1.5",
