--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@trpc/server": "^10.21.1",
     "@types/react-table": "^7.7.14",
     "@types/validator": "^13.7.10",
+    "autoprefixer": "^10.4.14",
     "cookie": "^0.5.0",
     "cookies-next": "^2.1.1",
     "dotenv": "^16.0.3",
