--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@trpc/next": "^10.21.1",
     "@trpc/react-query": "^10.21.1",
     "@trpc/server": "^10.21.1",
+    "@types/pg": "^8.6.6",
     "@types/react-table": "^7.7.14",
     "@types/validator": "^13.7.10",
     "autoprefixer": "^10.4.14",
