--- a/package.json
+++ b/package.json
@@ -35,9 +35,10 @@
     "dotenv": "^16.0.3",
     "luxon": "^3.3.0",
     "moment-timezone": "^0.5.43",
-    "next": "^13.1.1",
+    "next": "^13.4.1",
     "next-seo": "^5.15.0",
     "pg": "^8.10.0",
+    "pnpm": "^8.4.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
