--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@trpc/next": "^10.21.1",
     "@trpc/react-query": "^10.21.1",
     "@trpc/server": "^10.21.1",
+    "@types/gtag.js": "^0.0.12",
     "@types/pg": "^8.6.6",
     "@types/react-table": "^7.7.14",
     "@types/validator": "^13.7.10",
