--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,12 +14,18 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "types": ["jest", "node", "@types/testing-library__jest-dom"],
+    "types": [
+      "jest",
+      "node",
+      "@types/testing-library__jest-dom",
+      "@types/gtag.js"
+    ],
     "baseUrl": ".",
     "paths": {
       "@/components/*": ["./components/*"],
       "@/src/*": ["./src/*"],
-      "@/utils/*": ["./utils/*"]
+      "@/utils/*": ["./utils/*"],
+      "@/lib/*": ["./src/lib/*"]
     }
   },
   "include": [
