--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@headlessui/react": "^1.7.7",
     "@prisma/client": "4.13.0",
     "@reduxjs/toolkit": "^1.9.1",
+    "@sendgrid/mail": "^7.7.0",
     "@tanstack/react-query": "^4.29.5",
     "@trpc/client": "^10.21.1",
     "@trpc/next": "^10.21.1",
@@ -51,7 +52,8 @@
     "sharp": "^0.32.1",
     "superjson": "^1.12.3",
     "validator": "^13.7.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
