--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@prisma/client": "4.13.0",
     "@reduxjs/toolkit": "^1.9.1",
     "@sendgrid/mail": "^7.7.0",
+    "@sentry/core": "^7.51.2",
+    "@sentry/nextjs": "^7.51.2",
     "@tanstack/react-query": "^4.29.5",
     "@trpc/client": "^10.21.1",
     "@trpc/next": "^10.21.1",
