--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "autoprefixer": "^10.4.14",
     "cookie": "^0.5.0",
     "cookies-next": "^2.1.1",
+    "csv-parse": "^5.5.2",
     "dotenv": "^16.0.3",
     "luxon": "^3.3.0",
     "moment-timezone": "^0.5.43",
